--- a/podcasts/securitynow/design-a-computer.mdwn
+++ b/podcasts/securitynow/design-a-computer.mdwn
@@ -164,7 +164,7 @@ Leo: I've got to do, I keep wanting to do - and we've got people like Randal Sch
 
 ## Indirection: The Power of Pointers (Security Now 237)
 
-From http://www.grc.com/sn/sn-237.htm
+From http://www.grc.com/sn/sn-237.htm ([27:45](http://wiki.twit.tv/wiki/Security_Now_237#The_Power_Of_Pointers)):
 
 Leo: So there's a word in programming, "indirection," that is one of the fundamental programming concepts. And I remember very well when I first started studying C. I mean, I remember PEEK and POKE from Basic, which is essentially the same idea. But when I first started studying C, that was the hardest thing to get was indirection.
 
